objects/ApplicationLog__c.object
<CustomObject>
    <description>Stores debug, info and error messages for support purposes</description>
    <fields>
        <fullName>DebugLevel__c</fullName>
        <description>The debug level of the record.</description>
        <inlineHelpText>The type of application log</inlineHelpText>
        <label>Debug Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntegrationPayload__c</fullName>
        <description>The payload for integration messages</description>
        <inlineHelpText>The payload for integration messages</inlineHelpText>
        <label>Integration Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LogCode__c</fullName>
        <description>The related code for the record</description>
        <inlineHelpText>The related code for the record</inlineHelpText>
        <label>Log Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>The log message (either an error message or info message)</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReferenceId__c</fullName>
        <description>The record id of the related object that initiated the log record</description>
        <inlineHelpText>The record id of the related object that initiated the log record</inlineHelpText>
        <label>Reference Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceInformation__c</fullName>
        <description>The salesforce sObject for the reference id (e.g ref id 0000e9kkks is a Contact)</description>
        <inlineHelpText>The salesforce sObject for the reference id (e.g ref id 0000e9kkks is a Contact)</inlineHelpText>
        <label>Reference Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceFunction__c</fullName>
        <description>The source function name of the error (e.g. getContactInformation)</description>
        <inlineHelpText>The source function name of the error (e.g. getContactInformation)</inlineHelpText>
        <label>Source Function</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>The name of the utility class or trigger that the message originated from</description>
        <inlineHelpText>The name of the utility class or trigger that the message originated from</inlineHelpText>
        <label>Source</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <description>The original stack trace for exceptions</description>
        <inlineHelpText>The original stack trace for exceptions</inlineHelpText>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Application Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{000000000}</displayFormat>
        <label>Application Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>